# apec-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/apec_mcp/: __init__.py  auth.py  client.py  server.py
