[project]
name = "apec-mcp"
version = "0.1.0"
description = "MCP server for the APEC candidate-profile REST API"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
apec-mcp = "apec_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apec_mcp"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.11.0",
]
